// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader renders consistently 1`] = `
.c0 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: auto auto auto 1fr;
  grid-template-areas: 'context-area context-area context-area context-area' 'leading-action title-area trailing-action actions' 'description description description description' 'navigation navigation navigation navigation';
}

.c1 {
  grid-row: 2;
  grid-area: title-area;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1[data-size-variant="large"] [data-component="PH_Title"] {
  font-size: var(--text-title-size-large,2rem);
  line-height: var(--text-title-lineHeight-large,1.5);
  font-weight: var(--base-text-weight-normal,400);
}

.c1[data-size-variant="medium"] [data-component="PH_Title"] {
  font-size: var(--text-title-size-medium,1.25rem);
  line-height: var(--text-title-lineHeight-medium,1.6);
  font-weight: var(--base-text-weight-semibold,600);
}

.c1[data-size-variant="subtitle"] [data-component="PH_Title"] {
  font-size: var(--text-title-size-medium,1.25rem);
  line-height: var(--text-title-lineHeight-medium,1.6);
  font-weight: var(--base-text-weight-normal,400);
}

.c2 {
  grid-row: 1;
  grid-area: context-area;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 0.5rem;
  gap: 0.5rem;
}

.c3 {
  grid-row: 3;
  grid-area: description;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 0.5rem;
  gap: 0.5rem;
}

.c4 {
  grid-row: 4;
  grid-area: navigation;
  padding-top: 0.5rem;
  display: block;
}

@media screen and (max-width:calc(768px - 0.02px)) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    data-component="TitleArea"
    data-size-variant="medium"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
    data-component="PH_Description"
  />
  <div
    className="c4"
    data-component="PH_Navigation"
  />
</div>
`;

exports[`PageHeader renders default layout 1`] = `
.c0 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: auto auto auto 1fr;
  grid-template-areas: 'context-area context-area context-area context-area' 'leading-action title-area trailing-action actions' 'description description description description' 'navigation navigation navigation navigation';
}

.c1 {
  grid-row: 2;
  grid-area: title-area;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1[data-size-variant="large"] [data-component="PH_Title"] {
  font-size: var(--text-title-size-large,2rem);
  line-height: var(--text-title-lineHeight-large,1.5);
  font-weight: var(--base-text-weight-normal,400);
}

.c1[data-size-variant="medium"] [data-component="PH_Title"] {
  font-size: var(--text-title-size-medium,1.25rem);
  line-height: var(--text-title-lineHeight-medium,1.6);
  font-weight: var(--base-text-weight-semibold,600);
}

.c1[data-size-variant="subtitle"] [data-component="PH_Title"] {
  font-size: var(--text-title-size-medium,1.25rem);
  line-height: var(--text-title-lineHeight-medium,1.6);
  font-weight: var(--base-text-weight-normal,400);
}

.c2 {
  grid-row: 1;
  grid-area: context-area;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 0.5rem;
  gap: 0.5rem;
}

.c3 {
  grid-row: 3;
  grid-area: description;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 0.5rem;
  gap: 0.5rem;
}

.c4 {
  grid-row: 4;
  grid-area: navigation;
  padding-top: 0.5rem;
  display: block;
}

@media screen and (max-width:calc(768px - 0.02px)) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    display: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-component="TitleArea"
      data-size-variant="medium"
    >
      TitleArea
    </div>
    <div
      class="c2"
    >
      ContextArea
    </div>
    <div
      class="c3"
      data-component="PH_Description"
    >
      Description
    </div>
    <div
      class="c4"
      data-component="PH_Navigation"
    >
      Navigation
    </div>
  </div>
</div>
`;
